版本：1.0.9.0 内容：20201116 账本增加排序并显示总条数

--- a/miniprogram/pages/relation/relation.wxml
+++ b/miniprogram/pages/relation/relation.wxml
@@ -32,5 +32,5 @@
     </van-card>
 </van-row>
 <van-empty wx:else description="无数据" />
-<van-divider wx:if="{{hasMore}}" contentPosition="center">加载更多</van-divider>
-<van-divider wx:else contentPosition="center">已全部加载</van-divider>
+<van-divider wx:if="{{hasMore}}" contentPosition="center">加载更多（共{{total}}条）</van-divider>
+<van-divider wx:else contentPosition="center">已全部加载（共{{total}}条）</van-divider>
