版本：1.0.9.2 内容：20201117 人情管理模块，明细bug修改

--- a/miniprogram/pages/relation/relation.wxml
+++ b/miniprogram/pages/relation/relation.wxml
@@ -19,7 +19,7 @@
       wx:key="index"
       num=""
       tag=""
-      price="{{item.curMoney}}"
+      price="{{item.money}}"
       desc="{{'日期：' + item.date + '，' + '事由：' + item.cause + '，' + '关系：' +item.relation + '，' + '备注：' +item.remark}}"
       title="{{item.name}}"
       thumb="{{ item.avatarUrl ? item.avatarUrl : defaultAvatar }}"
