--- a/miniprogram/pages/relationAccountMgt/relationAccountMgt.wxml
+++ b/miniprogram/pages/relationAccountMgt/relationAccountMgt.wxml
@@ -61,8 +61,8 @@
           <view class="van-cell-text">{{item.name}} <van-tag type="{{item.tagType}}">{{item.status}}</van-tag></view>
         </view>
         <view slot="label">
-          <view>随礼：￥{{item.receiveTotal}}</view>
-          <view>收礼：￥{{item.giveTotal}}</view>
+          <view>收礼：￥{{item.receiveTotal}}</view>
+          <view>随礼：￥{{item.giveTotal}}</view>
         </view>
       </van-cell>
     </van-cell-group>
